--- a/index.html
+++ b/index.html
@@ -9,21 +9,24 @@
     
 </head>
 <body>
-
     <div class="container">
-        <h1>Todo List</h1>
-        <div class="input-container">
-            <input class="todo-input" placeholder="Add a new task">
-            <button class="add-button">
-                <i class="fa fa-plus-circle" ></i>
-            </button>
-        </div>
-        <div class="todos-container">
-            <ul class="todos"></ul>
-            <img class="empty-image" src="./img/empty-todo.svg">
-        </div>
+      <h1>Todo List</h1>
+      <div class="input-container">
+        <input class="todo-input" placeholder="Add a new task...">
+        <button class="add-button">
+          <i class="fa fa-plus-circle"></i>
+        </button>
+      </div>
+      <div class="filters">
+        <div class="filter" data-filter="completed">Complete</div>
+        <div class="filter" data-filter="pending">Incomplete</div>
+        <div class="delete-all">Delete All</div>
+      </div>
+      <div class="todos-container">
+        <ul class="todos"></ul>
+        <img class="empty-image" src="./img/empty-todo.svg">
+      </div>
     </div>
-    
-    <script src="main.js"></script>
-</body>
-</html>
+    <script src="./main.js"></script>
+  </body>
+  </html>
